# personal-lms

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  container.yml
.storybook/: main.ts  preview.ts  storybook-preview.css
app/: config.py  content_loader.py  content_pipeline.py  content_registry.py  content_scaffold.py  db.py  main.py  middleware.py  models.py  security.py  source_fetcher.py
app/routers/: ai_helper.py  auth.py  content.py  dashboard.py  terminal.py
app/services/: ai_helper_modes.py  ai_helper_service.py  ai_helper_view.py  catalog_service.py  checkpoint_service.py  content_service.py  dashboard_quote_service.py  execution_service.py  lain_provider.py  progress_service.py  recap_service.py  review_service.py  stuck_service.py  submission_service.py  (+3 more)
docs/: START_HERE.md
scripts/: build_content_prompt_pack.py  check_text_integrity.py  create_user.py  fetch_source.py  health_local.sh  report_curriculum.py  reset_password.py  reset_users.py  scaffold_checkpoint.py  scaffold_course.py  scaffold_lesson.py  scaffold_module.py  scaffold_task.py  start_local.sh  validate_content.py
tests/: content_test_utils.py  test_ai_helper.py  test_ai_helper_ui.py  test_app_smoke.py  test_catalog_service.py  test_content_integrity.py  test_content_prompt_pack.py  test_content_scaffold.py  test_content_validation.py  test_source_fetcher.py
(+136 files in other folders)
